Contact form aligned correctly

--- a/src/assets/scss/components/_contactUs.scss
+++ b/src/assets/scss/components/_contactUs.scss
@@ -8,4 +8,7 @@
   p {
     color: _palette(bg-alt);
   }
+  form {
+    min-height: 100%;
+  }
 }
